// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with name (hierarchy) 1`] = `"namespace A.B.C { }"`;

exports[`should return correctly with name 1`] = `"namespace N { }"`;

exports[`should return correctly with name, children 1`] = `
"namespace N {
    var a: any;
    function b(): any;
}"
`;

exports[`should return correctly with name, export 1`] = `"export namespace N { }"`;

exports[`should return correctly with name, export, children 1`] = `
"export namespace N {
    var a: any;
    function b(): any;
}"
`;
